# RLG

./: .gitignore  CMakeLists.txt  README.md  config.json
assets/: default.json  init.chai  quotes.txt  script.txt
lib/: raycolors.h
src/: main.cpp
src/core/: GameStore.cpp  GameStore.h  builder.cpp  execCtx.cpp  execCtx.h  gameConfig.cpp  gameConfig.h  guiBuilder.cpp  guiBuilder.h  scriptFns.h  state.cpp  state.h  textRectEX.h  types.h  widget.cpp  widget.h  widget_container_draggable.cpp  widget_container_draggable.h  widget_draggable.cpp  widget_draggable.h
src/widgets/: WG_Button.cpp  WG_Button.h  WG_TextInput.cpp  WG_TextInput.h  WG_Window.cpp  WG_Window.h
